PSP/examenPsp-AdrianSaavedra/RestExamen-AdrianSaavedra/src/main/java/org/example/restexamenadriansaavedra/common/errors/Invalid.java
package org.example.restexamenadriansaavedra.common.errors;

public class Invalid extends RuntimeException{
    public Invalid(String message) {
        super(message);
    }
}
